Just some minor code updates (#17)
Adding modifier
removing unused imports
general codecleanup